# tvguide

./: .gitignore  TODO  pyproject.toml  run.py  run.sh  scheduletest.py  sdapi-README.html  sdapi-README.md  tvguide-setup.py  updatedb.py
tests/: test_models.py  test_tvguide.py
tvguide/: __init__.py  auth.py  config.py  credential.py  data.py  errors.py  forms.py  guide.py  models.py  sdapi.py  search.py  time.py
tvguide/static/: tvg.css
tvguide/templates/: bplayout.html  channel.html  channelform.html  foundpeople.html  foundperson.html  foundprogs.html  grid.html  home.html  layout.html  tvabout.html  tvchannels.html  tvhome.html
tvguide/templates/auth/: login.html  register.html
tvguide/templates/guide/: home2.html
