[tool.poetry]
name = "tvguide"
version = "0.3.5"
description = "Schedules Direct based Television Guide."
authors = ["ccdale <chris.charles.allison+tvguide@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/ccdale/tvguide"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
keyring = "^23.2.0"
pyaml = "^21.8.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
